fix: truncate overflowing contact names in TaskEditForm and ContactList

--- a/src/app/main-pages/board/task/task-dialog/task-edit-form/task-edit-form.component.scss
+++ b/src/app/main-pages/board/task/task-dialog/task-edit-form/task-edit-form.component.scss
@@ -275,6 +275,9 @@
   span {
     text-align: left;
     flex: 1;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 
